--- a/Assignment1.html
+++ b/Assignment1.html
@@ -34,12 +34,12 @@
         </h3>
         <h2>
         <p>
-        For Abbrevation please hover on <abbr title="Lightning Web Component" style="color:  blue">LWC</abbr>
+        For Abbrevation please hover on <abbr title="Lightning Web Component" style="color:  blue">LWC</abbr><!--Abbrevation Tag-->
         </p>
         </h2>
         <br>
         <h4>
-            For more references of HTML tags <a href="https://www.google.com" target="_blank">click here</a>
+            For more references of HTML tags <a href="https://www.google.com" target="_blank">click here</a><!--Link tag to open the link in new window-->
         </h4>
         
     </body>
